--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,19 +1,12 @@
-.map-container{
-    position: absolute;
+.map-container {
+    position: relative;
     width: 100%;
+    height: 100vh;
 }
 
-
-
-.filter-container{
-    position: absolute;
-    top: 0;
-    z-index: 1000;
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px 2px lightgray;
-    background: #e6e6e6cc;
-    padding: 20px;
-    margin: 5px;
-    width: 200px;
+#map {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
